--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,15 @@ body{
   width: 100%;
   display: flex;
   justify-content: space-evenly;
+  flex-direction: column;
 }
+
+.messages{
+  display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
 
 .controls{
   display: flex;
@@ -88,8 +96,8 @@ body{
 }
 
 .btn-control{
-  width: 60px;
-  height: 60px;
+  width: 100px;
+  height: 100px;
   background: rgba(0, 242, 255, 0.1);
   border: 2px solid var(--button-color);
   border-radius: 12px;
