--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,32 @@ body{
     background: linear-gradient(0deg,rgba(15, 23, 42, 1) 0%, rgba(56, 55, 55, 1) 100%);
 }
 
+.overlay{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--primary-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+  transition: opacity 0.5s ease;
+}
+
+.hidden{
+  opacity: 0;
+  pointer-events: none;
+}
+
+.btn-control_mute{
+  width: 50px;
+  height: 50px;
+  font-size: var(--medium-print);
+
+}
+
 /* Section tittle */
 
 .header{
@@ -162,6 +188,12 @@ body{
   text-shadow: 0 0 5px #fbff00;
 } 
 
+.shake {
+  animation: shake 0.4s;
+  animation-iteration-count: infinite;
+}
+
+
 @keyframes parpadeo {
   0%, 18%, 22%, 25%, 53%, 57%, 100% {
     text-shadow: 
@@ -184,4 +216,18 @@ body{
   60% { transform: translate(2px, 2px); }
   80% { transform: translate(2px, -2px); }
   100% { transform: translate(0); }
+}
+
+@keyframes shake{
+  0% { transform: translate(1px, 1px) rotate(0deg);}
+  10% { transform: translate(-1px, -2px) rotate(-1deg);}
+  20% { transform: translate(-3px, 0px) rotate(1deg);}
+  30% { transform: translate(3px, 2px) rotate(0deg);}
+  40% { transform: translate(1px, -1px) rotate(1deg);}
+  50% { transform: translate(-1px, 2px) rotate(-1deg);}
+  60% { transform: translate(-3px, 1px) rotate(0deg);}
+  70% { transform: translate(3px, 1px) rotate(-1deg);}
+  80% { transform: translate(-1px, -1px) rotate(1deg);}
+  90% { transform: translate(1px, 2px) rotate(0deg);}
+  100% { transform: translate(1px, 2px) rotate(-1deg);}
 }
