--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,9 @@
     --neon-glow: #0066ff;
     --alert-color:#ff0055;
     --color-text: #e2e8f0;
-    --small-print: 1.2rem;
-    --medium-print: 1.8rem;
-    --large-print: 2.4rem;
+    --small-print: 1rem;
+    --medium-print: 1.6rem;
+    --large-print: 2rem;
     --font-family: 'Orbitron', sans-serif;
 
 }
@@ -39,13 +39,6 @@ body{
   pointer-events: none;
 }
 
-.btn-control_mute{
-  width: 50px;
-  height: 50px;
-  font-size: var(--medium-print);
-
-}
-
 /* Section tittle */
 
 .header{
@@ -54,13 +47,13 @@ body{
   justify-content: space-evenly;
 }
 .contenedor-titulo {
-  text-align: center;
-  padding: 20px;
-  background: transparent;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: -20px;
 } 
 
 .titulo-neon {
-  width: 80%;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -68,7 +61,6 @@ body{
   font-size:var(--large-print);
   color: var(--button-color);
   text-transform: uppercase;
-  margin-bottom: 10px;
 
   text-shadow: 
     0 0 7px var(--button-color),
@@ -110,6 +102,9 @@ body{
   animation: vibrar 0.1s linear infinite;
 }
 
+.space{
+  margin-left: 10px;
+}
 /* Section main*/
 
 .main{
@@ -119,37 +114,85 @@ body{
   flex-direction: column;
 }
 
+/* section messages */
 .messages{
   display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
+  flex-direction: column;
+  font-size: var(--small-print);
 }
 
+.section-one_messages, .section-two_messages, p{
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  color: var(--button-color);
+  margin-bottom: 0px;
+}
+
+  .btn-control_mute{
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 50px;
+    font-size: var(--medium-print);
+    background: transparent;
+}
+
+/* section game container */
+.game-container{
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 20px;
+  justify-content: center;
+}
+
+#game {
+  margin-right: 18px;
+  background-color: #0a0a12;
+  background-image: 
+    linear-gradient(rgba(0, 255, 255, 0.1) 1px, transparent 1px),
+    linear-gradient(90deg, rgba(0, 255, 255, 0.1) 1px, transparent 1px);
+  background-size: 10% 10%;
+  border: 4px solid var(--button-color);
+  box-shadow: 0 0 20px rgba(0, 242, 255, 0.4);
+  border-radius: 8px;
+  /* display: block;
+  margin:  0 auto; */
+}
 
 .controls{
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
+  flex-wrap: wrap;
+  justify-content: center;
   margin-top: 20px;
+  padding-bottom: 30px;
+  margin-right: 30px;
 }
 
 .fila-media{
+  width: 100%;
   display: flex;
-  gap: 15px;
+  justify-content: center;
+  gap: 20px;
+  align-items: center;
+  margin-top: 20px;
 }
 
 .btn-control{
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background: rgba(0, 242, 255, 0.1);
-  border: 2px solid var(--button-color);
+  border: 4px solid var(--button-color);
   border-radius: 12px;
   color: var(--button-color);
   font-size: var(--large-print);
   cursor: pointer;
-  display: flex;
-  justify-content: center;
   transition: all 0.2s ease;
   box-shadow: 0 0 10px rgba(0, 242, 255, 0.2);
 }
@@ -170,29 +213,15 @@ body{
   filter: drop-shadow(0 0 5px var(--button-color));
   }
   
-  p{
-      color: var(--button-color);
-      font-family: var(--font-family);
-      font-size: large;
-  }
-  .flecha{
+.arrow{
     font-size: var(--large-print);
     color: var(--button-color);
     text-shadow: 0 0 10px var(--button-color);
   }
 
-#game {
-  background-color: #0a0a12;
-  background-image: 
-    linear-gradient(rgba(0, 255, 255, 0.1) 1px, transparent 1px),
-    linear-gradient(90deg, rgba(0, 255, 255, 0.1) 1px, transparent 1px);
-  background-size: 10% 10%;
-  border: 2px solid var(--button-color);
-  box-shadow: 0 0 20px rgba(0, 242, 255, 0.4);
-  border-radius: 8px;
-  display: block;
-  margin:  0 auto;
-}
+
+
+
 
 #lives{
   font-size: var(--medium-print);
@@ -251,25 +280,7 @@ body{
 }
 
 @media (max-width: 600px){
-  :root {
-    --large-print: 1.6rem;
-    --medium-print: 1.2rem;
-    --small-print: 1rem;
-  }
+  
 
-  .header{
-    padding: 10px 0;
-  }
-
-  .btn-control{
-    width: 60px;
-    height: 60px;
-    font-size: var(--medium-print);
-  }
-
-  .messages{
-    justify-content: center;
-    gap: 10px;
-    font-size: var(--small-print);
-  }
+  
 }
